src/lenguaje/parser.output
Terminales no usados en la gramática

    TK_DO
    TK_MAIN


Estado 76 conflictos: 1 desplazamiento/reducción
Estado 77 conflictos: 1 desplazamiento/reducción
Estado 149 conflictos: 1 desplazamiento/reducción
Estado 150 conflictos: 1 desplazamiento/reducción
Estado 151 conflictos: 1 desplazamiento/reducción
Estado 152 conflictos: 1 desplazamiento/reducción
Estado 153 conflictos: 1 desplazamiento/reducción
Estado 154 conflictos: 1 desplazamiento/reducción
Estado 156 conflictos: 1 desplazamiento/reducción
Estado 158 conflictos: 1 desplazamiento/reducción
Estado 159 conflictos: 1 desplazamiento/reducción
Estado 160 conflictos: 1 desplazamiento/reducción
Estado 161 conflictos: 1 desplazamiento/reducción
Estado 162 conflictos: 1 desplazamiento/reducción
Estado 163 conflictos: 1 desplazamiento/reducción
Estado 164 conflictos: 1 desplazamiento/reducción
Estado 165 conflictos: 1 desplazamiento/reducción
Estado 166 conflictos: 1 desplazamiento/reducción
Estado 167 conflictos: 1 desplazamiento/reducción
Estado 168 conflictos: 1 desplazamiento/reducción
Estado 188 conflictos: 19 desplazamiento/reducción
Estado 192 conflictos: 12 desplazamiento/reducción


Gramática

    0 $accept: inicio $end

    1 inicio: listainstrucciones

    2 listainstrucciones: listainstrucciones instruccion
    3                   | instruccion

    4 instruccion: IMPRIMIR
    5            | DECLARACION
    6            | ASIGNACION
    7            | IF
    8            | INCREMENTO_DECREMENTO TK_PTCOMA
    9            | SWITCH
   10            | BREAK
   11            | WHILE
   12            | FOR
   13            | CONTINUAR
   14            | RETORNAR
   15            | DECLARAR_FUNCION
   16            | LLAMADA_PROCEDIMIENTO
   17            | DECLARAR_VECTOR
   18            | ID TK_ADD TK_PA expr TK_PC TK_PTCOMA

   19 DECLARACION: TIPO ID TK_IGUAL expr TK_PTCOMA
   20            | TIPO ID TK_PTCOMA
   21            | TK_FINAL TIPO ID TK_IGUAL expr TK_PTCOMA

   22 DECLARAR_VECTOR: TIPO TK_CA TK_CC ID TK_IGUAL TK_NUEVO TIPO TK_CA expr TK_CC TK_PTCOMA
   23                | TIPO TK_CA TK_CC ID TK_IGUAL TK_LLA VALORES TK_LLC TK_PTCOMA

   24 ASIGNACION: expr OP_ASIGNACION expr TK_PTCOMA
   25           | ID TK_CA expr TK_CC OP_ASIGNACION expr TK_PTCOMA

   26 IMPRIMIR: TK_PRINT TK_PA expr TK_PC TK_PTCOMA

   27 INCREMENTO_DECREMENTO: expr TK_SUMA TK_SUMA
   28                      | expr TK_RESTA TK_RESTA

   29 IF: TK_IF TK_PA expr TK_PC TK_LLA listainstrucciones TK_LLC
   30   | TK_IF TK_PA expr TK_PC TK_LLA listainstrucciones TK_LLC TK_ELSE TK_LLA listainstrucciones TK_LLC
   31   | TK_IF TK_PA expr TK_PC TK_LLA listainstrucciones TK_LLC TK_ELSE IF

   32 BREAK: TK_BREAK TK_PTCOMA

   33 CONTINUAR: TK_CONTINUE TK_PTCOMA

   34 RETORNAR: TK_RETURN expr TK_PTCOMA
   35         | TK_RETURN TK_PTCOMA

   36 SWITCH: TK_SWITCH TK_PA expr TK_PC TK_LLA CASES TK_LLC

   37 CASES: CASE CASES
   38      | CASE

   39 CASE: TK_CASE expr TK_DOSPUNTOS listainstrucciones
   40     | TK_DEFAULT TK_DOSPUNTOS listainstrucciones

   41 WHILE: TK_WHILE TK_PA expr TK_PC TK_LLA listainstrucciones TK_LLC

   42 FOR: TK_FOR TK_PA DECLARACION expr TK_PTCOMA INCREMENTO_DECREMENTO TK_PC TK_LLA listainstrucciones TK_LLC

   43 TIPO_PARAM: TIPO
   44           | TIPO TK_CA TK_CC

   45 PARAMETROS: TIPO_PARAM ID TK_COMA PARAMETROS
   46           | TIPO_PARAM ID
   47           | ε

   48 DECLARAR_FUNCION: TIPO ID TK_PA PARAMETROS TK_PC TK_LLA listainstrucciones TK_LLC
   49                 | TK_VOID ID TK_PA PARAMETROS TK_PC TK_LLA listainstrucciones TK_LLC

   50 LLAMADA_PROCEDIMIENTO: ID TK_PA VALORES TK_PC TK_PTCOMA

   51 TIPO: TK_INT
   52     | TK_STRING
   53     | TK_FLOAT
   54     | TK_BOOL
   55     | TK_CHAR
   56     | TK_DOUBLE

   57 expr: TK_PA expr TK_PC
   58     | TK_PARSEINT TK_PA expr TK_PC
   59     | TK_PARSEFLOAT TK_PA expr TK_PC
   60     | TK_PARSEDOUBLE TK_PA expr TK_PC
   61     | TK_VALUEOF TK_PA expr TK_PC
   62     | TK_JOIN TK_PA expr TK_COMA VALORES TK_PC
   63     | TK_PA TIPO TK_PC expr
   64     | TK_INDEXOF TK_PA expr TK_COMA expr TK_PC
   65     | TK_RESTA expr
   66     | INT
   67     | DECIMAL
   68     | CARACTER
   69     | CADENA
   70     | BOOL
   71     | DOUBLE
   72     | ID
   73     | ARITMETICOS
   74     | RELACIONALES
   75     | LOGICOS
   76     | LLAMADA_FUNCION
   77     | ID TK_CA expr TK_CC
   78     | ID TK_LENGTH

   79 ARITMETICOS: expr TK_SUMA expr
   80            | expr TK_RESTA expr
   81            | expr TK_MULTIPLICACION expr
   82            | expr TK_DIVISION expr
   83            | expr TK_MODULAR expr
   84            | expr TK_AMPER expr
   85            | expr TK_PIPE expr
   86            | expr TK_POT expr
   87            | expr TK_MAYOR_MAYOR expr
   88            | expr TK_MENOR_MENOR expr

   89 OP_ASIGNACION: TK_IGUAL
   90              | TK_MAS_IGUAL
   91              | TK_MENOS_IGUAL
   92              | TK_POR_IGUAL
   93              | TK_DIVIDIR_IGUAL
   94              | TK_PORCENTAJE_IGUAL
   95              | TK_AND_IGUAL
   96              | TK_OR_IGUAL
   97              | TK_POTENCIA_IGUAL
   98              | TK_MAYOR_MAYOR_IGUAL
   99              | TK_MENOR_MENOR_IGUAL
  100              | TK_DOSPUNTOS_IGUAL

  101 RELACIONALES: expr TK_IGUAL_IGUAL expr
  102             | expr TK_EQUALS TK_PA expr TK_PC
  103             | expr TK_DIFERENTE expr
  104             | expr TK_MAYOR_IGUAL expr
  105             | expr TK_MENOR_IGUAL expr
  106             | expr TK_MAYOR expr
  107             | expr TK_MENOR expr

  108 LOGICOS: expr TK_AND expr
  109        | expr TK_OR expr
  110        | TK_NOT expr

  111 VALORES: expr TK_COMA VALORES
  112        | expr
  113        | ε

  114 LLAMADA_FUNCION: ID TK_PA VALORES TK_PC


Terminales con las reglas donde aparecen

    $end (0) 0
    error (256)
    TK_PRINT (258) 26
    TK_IF (259) 29 30 31
    TK_ELSE (260) 30 31
    TK_WHILE (261) 41
    TK_FOR (262) 42
    TK_DO (263)
    TK_SWITCH (264) 36
    TK_CASE (265) 39
    TK_CONTINUE (266) 33
    TK_BREAK (267) 32
    TK_RETURN (268) 34 35
    TK_VOID (269) 49
    TK_MAIN (270)
    TK_DEFAULT (271) 40
    TK_NUEVO (272) 22
    TK_INT (273) 51
    TK_FLOAT (274) 53
    TK_STRING (275) 52
    TK_BOOL (276) 54
    TK_CHAR (277) 55
    TK_PARSEINT (278) 58
    TK_PARSEFLOAT (279) 59
    TK_PARSEDOUBLE (280) 60
    TK_VALUEOF (281) 61
    TK_JOIN (282) 62
    TK_DOUBLE (283) 56
    TK_EQUALS (284) 102
    TK_LENGTH (285) 78
    TK_FINAL (286) 21
    TK_INDEXOF (287) 64
    TK_ADD (288) 18
    TK_PA (289) 18 26 29 30 31 36 41 42 48 49 50 57 58 59 60 61 62 63 64 102 114
    TK_PC (290) 18 26 29 30 31 36 41 42 48 49 50 57 58 59 60 61 62 63 64 102 114
    TK_LLA (291) 23 29 30 31 36 41 42 48 49
    TK_LLC (292) 23 29 30 31 36 41 42 48 49
    TK_PTCOMA (293) 8 18 19 20 21 22 23 24 25 26 32 33 34 35 42 50
    TK_DOSPUNTOS (294) 39 40
    TK_COMA (295) 45 62 64 111
    TK_CA (296) 22 23 25 44 77
    TK_CC (297) 22 23 25 44 77
    TK_MAYOR (298) 106
    TK_MENOR (299) 107
    TK_MAYOR_IGUAL (300) 104
    TK_MENOR_IGUAL (301) 105
    TK_AND (302) 108
    TK_OR (303) 109
    TK_NOT (304) 110
    TK_SUMA (305) 27 79
    TK_RESTA (306) 28 65 80
    TK_MULTIPLICACION (307) 81
    TK_DIVISION (308) 82
    TK_MODULAR (309) 83
    TK_AMPER (310) 84
    TK_PIPE (311) 85
    TK_POT (312) 86
    TK_MAYOR_MAYOR (313) 87
    TK_MENOR_MENOR (314) 88
    TK_IGUAL (315) 19 21 22 23 89
    TK_MAS_IGUAL (316) 90
    TK_MENOS_IGUAL (317) 91
    TK_POR_IGUAL (318) 92
    TK_DIVIDIR_IGUAL (319) 93
    TK_PORCENTAJE_IGUAL (320) 94
    TK_AND_IGUAL (321) 95
    TK_OR_IGUAL (322) 96
    TK_POTENCIA_IGUAL (323) 97
    TK_MAYOR_MAYOR_IGUAL (324) 98
    TK_MENOR_MENOR_IGUAL (325) 99
    TK_DOSPUNTOS_IGUAL (326) 100
    TK_IGUAL_IGUAL (327) 101
    TK_DIFERENTE (328) 103
    INT <str> (329) 66
    DECIMAL <str> (330) 67
    CARACTER <str> (331) 68
    CADENA <str> (332) 69
    ID <str> (333) 18 19 20 21 22 23 25 45 46 48 49 50 72 77 78 114
    BOOL <str> (334) 70
    DOUBLE <str> (335) 71
    UMINUS (336)


No terminales con las reglas donde aparecen

    $accept (82)
        on left: 0
    inicio <node> (83)
        on left: 1
        on right: 0
    listainstrucciones <node> (84)
        on left: 2 3
        on right: 1 2 29 30 31 39 40 41 42 48 49
    instruccion <node> (85)
        on left: 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18
        on right: 2 3
    DECLARACION <node> (86)
        on left: 19 20 21
        on right: 5 42
    DECLARAR_VECTOR <node> (87)
        on left: 22 23
        on right: 17
    ASIGNACION <node> (88)
        on left: 24 25
        on right: 6
    IMPRIMIR <node> (89)
        on left: 26
        on right: 4
    INCREMENTO_DECREMENTO <node> (90)
        on left: 27 28
        on right: 8 42
    IF <node> (91)
        on left: 29 30 31
        on right: 7 31
    BREAK <node> (92)
        on left: 32
        on right: 10
    CONTINUAR <node> (93)
        on left: 33
        on right: 13
    RETORNAR <node> (94)
        on left: 34 35
        on right: 14
    SWITCH <node> (95)
        on left: 36
        on right: 9
    CASES <node> (96)
        on left: 37 38
        on right: 36 37
    CASE <node> (97)
        on left: 39 40
        on right: 37 38
    WHILE <node> (98)
        on left: 41
        on right: 11
    FOR <node> (99)
        on left: 42
        on right: 12
    TIPO_PARAM <node> (100)
        on left: 43 44
        on right: 45 46
    PARAMETROS <node> (101)
        on left: 45 46 47
        on right: 45 48 49
    DECLARAR_FUNCION <node> (102)
        on left: 48 49
        on right: 15
    LLAMADA_PROCEDIMIENTO <node> (103)
        on left: 50
        on right: 16
    TIPO <node> (104)
        on left: 51 52 53 54 55 56
        on right: 19 20 21 22 23 43 44 48 63
    expr <node> (105)
        on left: 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78
        on right: 18 19 21 22 24 25 26 27 28 29 30 31 34 36 39 41 42 57 58 59 60 61 62 63 64 65 77 79 80 81 82 83 84 85 86 87 88 101 102 103 104 105 106 107 108 109 110 111 112
    ARITMETICOS <node> (106)
        on left: 79 80 81 82 83 84 85 86 87 88
        on right: 73
    OP_ASIGNACION <str> (107)
        on left: 89 90 91 92 93 94 95 96 97 98 99 100
        on right: 24 25
    RELACIONALES <node> (108)
        on left: 101 102 103 104 105 106 107
        on right: 74
    LOGICOS <node> (109)
        on left: 108 109 110
        on right: 75
    VALORES <node> (110)
        on left: 111 112 113
        on right: 23 50 62 111 114
    LLAMADA_FUNCION <node> (111)
        on left: 114
        on right: 76


Estado 0

    0 $accept: • inicio $end

    TK_PRINT        desplazar e ir al estado 1
    TK_IF           desplazar e ir al estado 2
    TK_WHILE        desplazar e ir al estado 3
    TK_FOR          desplazar e ir al estado 4
    TK_SWITCH       desplazar e ir al estado 5
    TK_CONTINUE     desplazar e ir al estado 6
    TK_BREAK        desplazar e ir al estado 7
    TK_RETURN       desplazar e ir al estado 8
    TK_VOID         desplazar e ir al estado 9
    TK_INT          desplazar e ir al estado 10
    TK_FLOAT        desplazar e ir al estado 11
    TK_STRING       desplazar e ir al estado 12
    TK_BOOL         desplazar e ir al estado 13
    TK_CHAR         desplazar e ir al estado 14
    TK_PARSEINT     desplazar e ir al estado 15
    TK_PARSEFLOAT   desplazar e ir al estado 16
    TK_PARSEDOUBLE  desplazar e ir al estado 17
    TK_VALUEOF      desplazar e ir al estado 18
    TK_JOIN         desplazar e ir al estado 19
    TK_DOUBLE       desplazar e ir al estado 20
    TK_FINAL        desplazar e ir al estado 21
    TK_INDEXOF      desplazar e ir al estado 22
    TK_PA           desplazar e ir al estado 23
    TK_NOT          desplazar e ir al estado 24
    TK_RESTA        desplazar e ir al estado 25
    INT             desplazar e ir al estado 26
    DECIMAL         desplazar e ir al estado 27
    CARACTER        desplazar e ir al estado 28
    CADENA          desplazar e ir al estado 29
    ID              desplazar e ir al estado 30
    BOOL            desplazar e ir al estado 31
    DOUBLE          desplazar e ir al estado 32

    inicio                 ir al estado 33
    listainstrucciones     ir al estado 34
    instruccion            ir al estado 35
    DECLARACION            ir al estado 36
    DECLARAR_VECTOR        ir al estado 37
    ASIGNACION             ir al estado 38
    IMPRIMIR               ir al estado 39
    INCREMENTO_DECREMENTO  ir al estado 40
    IF                     ir al estado 41
    BREAK                  ir al estado 42
    CONTINUAR              ir al estado 43
    RETORNAR               ir al estado 44
    SWITCH                 ir al estado 45
    WHILE                  ir al estado 46
    FOR                    ir al estado 47
    DECLARAR_FUNCION       ir al estado 48
    LLAMADA_PROCEDIMIENTO  ir al estado 49
    TIPO                   ir al estado 50
    expr                   ir al estado 51
    ARITMETICOS            ir al estado 52
    RELACIONALES           ir al estado 53
    LOGICOS                ir al estado 54
    LLAMADA_FUNCION        ir al estado 55


Estado 1

   26 IMPRIMIR: TK_PRINT • TK_PA expr TK_PC TK_PTCOMA

    TK_PA  desplazar e ir al estado 56


Estado 2

   29 IF: TK_IF • TK_PA expr TK_PC TK_LLA listainstrucciones TK_LLC
   30   | TK_IF • TK_PA expr TK_PC TK_LLA listainstrucciones TK_LLC TK_ELSE TK_LLA listainstrucciones TK_LLC
   31   | TK_IF • TK_PA expr TK_PC TK_LLA listainstrucciones TK_LLC TK_ELSE IF

    TK_PA  desplazar e ir al estado 57


Estado 3

   41 WHILE: TK_WHILE • TK_PA expr TK_PC TK_LLA listainstrucciones TK_LLC

    TK_PA  desplazar e ir al estado 58


Estado 4

   42 FOR: TK_FOR • TK_PA DECLARACION expr TK_PTCOMA INCREMENTO_DECREMENTO TK_PC TK_LLA listainstrucciones TK_LLC

    TK_PA  desplazar e ir al estado 59


Estado 5

   36 SWITCH: TK_SWITCH • TK_PA expr TK_PC TK_LLA CASES TK_LLC

    TK_PA  desplazar e ir al estado 60


Estado 6

   33 CONTINUAR: TK_CONTINUE • TK_PTCOMA

    TK_PTCOMA  desplazar e ir al estado 61


Estado 7

   32 BREAK: TK_BREAK • TK_PTCOMA

    TK_PTCOMA  desplazar e ir al estado 62


Estado 8

   34 RETORNAR: TK_RETURN • expr TK_PTCOMA
   35         | TK_RETURN • TK_PTCOMA

    TK_PARSEINT     desplazar e ir al estado 15
    TK_PARSEFLOAT   desplazar e ir al estado 16
    TK_PARSEDOUBLE  desplazar e ir al estado 17
    TK_VALUEOF      desplazar e ir al estado 18
    TK_JOIN         desplazar e ir al estado 19
    TK_INDEXOF      desplazar e ir al estado 22
    TK_PA           desplazar e ir al estado 23
    TK_PTCOMA       desplazar e ir al estado 63
    TK_NOT          desplazar e ir al estado 24
    TK_RESTA        desplazar e ir al estado 25
    INT             desplazar e ir al estado 26
    DECIMAL         desplazar e ir al estado 27
    CARACTER        desplazar e ir al estado 28
    CADENA          desplazar e ir al estado 29
    ID              desplazar e ir al estado 64
    BOOL            desplazar e ir al estado 31
    DOUBLE          desplazar e ir al estado 32

    expr             ir al estado 65
    ARITMETICOS      ir al estado 52
    RELACIONALES     ir al estado 53
    LOGICOS          ir al estado 54
    LLAMADA_FUNCION  ir al estado 55


Estado 9

   49 DECLARAR_FUNCION: TK_VOID • ID TK_PA PARAMETROS TK_PC TK_LLA listainstrucciones TK_LLC

    ID  desplazar e ir al estado 66


Estado 10

   51 TIPO: TK_INT •

    $default  reduce usando la regla 51 (TIPO)


Estado 11

   53 TIPO: TK_FLOAT •

    $default  reduce usando la regla 53 (TIPO)


Estado 12

   52 TIPO: TK_STRING •

    $default  reduce usando la regla 52 (TIPO)


Estado 13

   54 TIPO: TK_BOOL •

    $default  reduce usando la regla 54 (TIPO)


Estado 14

   55 TIPO: TK_CHAR •

    $default  reduce usando la regla 55 (TIPO)


Estado 15

   58 expr: TK_PARSEINT • TK_PA expr TK_PC

    TK_PA  desplazar e ir al estado 67


Estado 16

   59 expr: TK_PARSEFLOAT • TK_PA expr TK_PC

    TK_PA  desplazar e ir al estado 68


Estado 17

   60 expr: TK_PARSEDOUBLE • TK_PA expr TK_PC

    TK_PA  desplazar e ir al estado 69


Estado 18

   61 expr: TK_VALUEOF • TK_PA expr TK_PC

    TK_PA  desplazar e ir al estado 70


Estado 19

   62 expr: TK_JOIN • TK_PA expr TK_COMA VALORES TK_PC

    TK_PA  desplazar e ir al estado 71


Estado 20

   56 TIPO: TK_DOUBLE •

    $default  reduce usando la regla 56 (TIPO)


Estado 21

   21 DECLARACION: TK_FINAL • TIPO ID TK_IGUAL expr TK_PTCOMA

    TK_INT     desplazar e ir al estado 10
    TK_FLOAT   desplazar e ir al estado 11
    TK_STRING  desplazar e ir al estado 12
    TK_BOOL    desplazar e ir al estado 13
    TK_CHAR    desplazar e ir al estado 14
    TK_DOUBLE  desplazar e ir al estado 20

    TIPO  ir al estado 72


Estado 22

   64 expr: TK_INDEXOF • TK_PA expr TK_COMA expr TK_PC

    TK_PA  desplazar e ir al estado 73


Estado 23

   57 expr: TK_PA • expr TK_PC
   63     | TK_PA • TIPO TK_PC expr
